; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/tegra/extr_dsi.c_tegra_dsi_ganged_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/tegra/extr_dsi.c_tegra_dsi_ganged_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tegra_dsi = type { i32 }

@DSI_GANGED_MODE_START = common dso_local global i32 0, align 4
@DSI_GANGED_MODE_SIZE = common dso_local global i32 0, align 4
@DSI_GANGED_MODE_CONTROL_ENABLE = common dso_local global i32 0, align 4
@DSI_GANGED_MODE_CONTROL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tegra_dsi*, i32, i32)* @tegra_dsi_ganged_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tegra_dsi_ganged_enable(%struct.tegra_dsi* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.tegra_dsi*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.tegra_dsi* %0, %struct.tegra_dsi** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.tegra_dsi*, %struct.tegra_dsi** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @DSI_GANGED_MODE_START, align 4
  %11 = call i32 @tegra_dsi_writel(%struct.tegra_dsi* %8, i32 %9, i32 %10)
  %12 = load %struct.tegra_dsi*, %struct.tegra_dsi** %4, align 8
  %13 = load i32, i32* %6, align 4
  %14 = shl i32 %13, 16
  %15 = load i32, i32* %6, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @DSI_GANGED_MODE_SIZE, align 4
  %18 = call i32 @tegra_dsi_writel(%struct.tegra_dsi* %12, i32 %16, i32 %17)
  %19 = load i32, i32* @DSI_GANGED_MODE_CONTROL_ENABLE, align 4
  store i32 %19, i32* %7, align 4
  %20 = load %struct.tegra_dsi*, %struct.tegra_dsi** %4, align 8
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* @DSI_GANGED_MODE_CONTROL, align 4
  %23 = call i32 @tegra_dsi_writel(%struct.tegra_dsi* %20, i32 %21, i32 %22)
  ret void
}

declare dso_local i32 @tegra_dsi_writel(%struct.tegra_dsi*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
